--- a/todolist/todolist.html
+++ b/todolist/todolist.html
@@ -5,10 +5,10 @@
   </head>
   <body>
     <div class="heading">
-      <h1>Kaali kaali aankhen<br>To Todo</h1>
+      <h1>To Do List</h1>
     </div>
     <div class="split left">  
-      <input type="text" id="add-task"><br>
+      <input type="text" id="add-task" placeholder="Add new task"><br>
 
       <h3>Todo</h3>
       <ul id="incomplete-tasks">
@@ -19,7 +19,10 @@
       </ul>
       
       <h3 id = "completed">Completed</h3>
-      <ul id="completed-tasks">
+      <ul class="completed-tasks">
+        <li><input type="checkbox" checked><label>See the Doctor</label><input type="text"></li>
+        <li><input type="checkbox" checked><label>See the Doctor</label><input type="text"></li>
+        <li><input type="checkbox" checked><label>See the Doctor</label><input type="text"></li>
         <li><input type="checkbox" checked><label>See the Doctor</label><input type="text"></li>
       </ul>
     </div>
@@ -31,5 +34,4 @@
     <script type="text/javascript" src="app.js"></script>
 
   </body>
-  <button class="button">+</button>
 </html>
