--- a/todolist/todolist.html
+++ b/todolist/todolist.html
@@ -12,18 +12,11 @@
 
       <h3>Todo</h3>
       <ul id="incomplete-tasks">
-        <li><input type="checkbox"><label>Task 1</label><input type="text"></li>
-        <li><input type="checkbox"><label>Task 2</label><input type="text"></li>
-        <li><input type="checkbox"><label>Task 3</label><input type="text"></li>
-        <li><input type="checkbox"><label>Task 4</label><input type="text"></li>
       </ul>
       
       <h3 id = "completed">Completed</h3>
-      <ul class="completed-tasks">
-        <li><input type="checkbox" checked><label>See the Doctor</label><input type="text"></li>
-        <li><input type="checkbox" checked><label>See the Doctor</label><input type="text"></li>
-        <li><input type="checkbox" checked><label>See the Doctor</label><input type="text"></li>
-        <li><input type="checkbox" checked><label>See the Doctor</label><input type="text"></li>
+      <ul class="completed-tasks" id = "completed-tasks-id">
+        
       </ul>
     </div>
     <div class="vertical">  
